cleanup: get rid of unnecessary maven profiles in structured_derby pom.